Fri 28 Aug 2009 11:25:43 BST  Tom Mortimer <tom@flax.co.uk>

    * completed Indexing Documents section of tutorial.

Fri 28 Aug 2009 10:36:43 BST  Tom Mortimer <tom@flax.co.uk>
    
    * reformatted tutorial text to fit 80-column width

Fri 28 Aug 2009 09:54:50 BST  Tom Mortimer <tom@flax.co.uk>

    * moved tutorial to flax_search_server/docs

Fri 28 Aug 2009 09:43:50 BST  Tom Mortimer <tom@flax.co.uk>

    * moved client libraries under flax_search_server as they are
      dependant projects.

Fri Jul 31 14:20:19 BST 2009  Tom Mortimer <tom@flax.co.uk>

    * flax/searchserver/utils.py: Use hashlib module in preference to sha.

Mon Jul 13 17:21:53 BST 2009  Tom Mortimer <tom@flax.co.uk>

    * flax/searchserver/backends/xappy_backend.py,
    * flax/searchserver/application.py: Added metadata resource.

Wed Jul 01 08:00:13 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* flax/searchserver/jstemplates.py: Remove unneeded import.

Tue Jun 30 13:05:04 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* flax/searchserver/backends/xappy_backend.py: Handle
	  summary_fields being set to None.

Tue Jun 30 12:49:09 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* flax/searchserver/jstemplates.py: Slightly more robust template
	  calling.

Tue Jun 30 12:09:31 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* flax/searchserver/application.py: Fix copy-and-paste bug.

Tue Jun 30 10:32:20 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* flax/searchserver/application.py,
	  flax/searchserver/backends/xappy_backend.py: Rework and refactor.

Tue Jun 30 10:30:45 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* flax/searchserver/queries.py: Fix bugs due to minor typos.

Tue Jun 30 10:28:52 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* flax/searchserver/schema.py: Add support for spell correction in
	  xappy schema.  Reorganise a bit to be neater.
